2010-04-12  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/aggr13.adb: New test.
	* gnat.dg/aggr14.adb: Likewise.
	* gnat.dg/aggr14_pkg.ad[sb]: New helper.

2010-04-12  Richard Guenther  <rguenther@suse.de>

	PR c++/43611
	* g++.dg/torture/pr43611.C: New testcase.

2010-04-12  Shujing Zhao  <pearly.zhao@oracle.com>

	PR c/36774
	* gcc.dg/pr36774-1.c: New test.
	* gcc.dg/pr36774-2.c: New test.

2010-04-11  Kaushik Phatak  <kaushik.phatak@kpitcummins.com>

	* gcc.target/sh/rte-delay-slot.c: New test.

2010-04-11  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/pack9.adb: Remove -cargs option.
	* gnat.dg/aggr12.ad[sb]: New test.

2010-04-10  Jie Zhang  <jie@codesourcery.com>

	PR target/43417
	* gcc.target/sh/pr43417.c: New test.

2010-04-10  Tobias Burnus  <burnus@net-b.de>

	PR fortran/43591
	* gfortran.dg/spec_expr_6.f90: New test.

2010-04-09  Manuel López-Ibáñez <manu@gcc.gnu.org>

	PR cpp/43195
	* gcc.dg/cpp/pr43195.c: New.
	* gcc.dg/cpp/pr43195.h: New.

2010-04-09  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR 42965
	* gcc.dg/Werror-6.c: Adjust.
	* gcc.dg/Werror-implicit-function-declaration.c: Likewise.
	* gcc.dg/Werror-4.c: Likewise.
	* gcc.dg/Wdeclaration-after-statement-3.c: Likewise.
	* gcc.dg/Wswitch-enum-error.c: Likewise.
	* gcc.dg/Wpointer-arith.c: Likewise.
	* gcc.dg/Wfatal.c: Likewise.
	* gcc.dg/Wswitch-error.c: Likewise.
	* g++.dg/warn/unused-result1-Werror.c: Likewise.
	* gcc.dg/Werror-9.c: Delete. Duplicate of Werror-4.c.
	* gcc.dg/cpp/warn-undef-2.c: Likewise.
	* gcc.dg/cpp/warn-traditional-2.c: Likewise.
	* gcc.dg/cpp/warn-comments-2.c: Likewise.
	* gcc.dg/cpp/warn-variadic-2.c: Likewise.
	* gcc.dg/cpp/warning-directive-2.c: Likewise.
	* gcc.dg/cpp/warn-long-long-2.c: Likewise.
	* gcc.dg/cpp/warn-deprecated-2.c: Likewise.
	* gcc.dg/cpp/warn-multichar-2.c: Likewise.
	* gcc.dg/cpp/warn-normalized-3.c: Likewise.
	* gcc.dg/cpp/warn-cxx-compat-2.c: Likewise.
	* gcc.dg/cpp/warn-trigraphs-3.c: Likewise.